--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
             <version>2.14.2</version>
         </dependency>
 
+
+        <!-- Database dependency-->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
